# ModernCppDesign

./: .gitignore  .travis.yml  .travis_build_and_test.sh  CMakeLists.txt  NotesSmartPointers.txt  README.md
01_Policy_Based_Class_Design/: CMakeLists.txt  PartialSpecOfMemberFun.cpp  Policies.cpp  SmartPointerPolicies.cpp
02_Techniques/: CMakeLists.txt  Convertibility.cpp  Convertibility.h  Int2Type.cpp  Int2Type.h  PartialTemplateSpecialization.cpp  Traits.cpp  Type2Type.cpp  Type2Type.h  TypeInfoWrapper.cpp
03_Typelists/: CMakeLists.txt  Typelists.cpp  Typelists.h
04_SmallObjectAllocation/: CMakeLists.txt  SmallObjectAllocation.cpp
05_Functors/: CMakeLists.txt  Functors.cpp
06_Singleton/: CMakeLists.txt  Singleton.cpp
07_SmartPointers/: CMakeLists.txt  SmartPointers.cpp
08_ObjectFactories/: CMakeLists.txt  ObjectFactories.cpp
09_AbstractFactory/: AbstractFactory.cpp  CMakeLists.txt
1. Policy-Based Class Design/: CMakeLists.txt  PartialSpecOfMemberFun.cpp  Policies.cpp
10_Visitor/: CMakeLists.txt  Visitor.cpp
11_Multimethods/: CMakeLists.txt  Multimethods.cpp
General C++ Notes/: Exceptions.md
code from book/: README.txt  loki-book-1st-edition-version.tar.bz2
